# fair_visualization_metrics

./: README.md  figures.py  graphics.py  pyproject.toml  requirements.txt  scaling.py
analysis/: data.py  graphics.py  radar.py  scaling.py
data/: example.json  example_reduced.json
